This is a second commit

--- a/github_doc1.qmd
+++ b/github_doc1.qmd
@@ -1,7 +1,10 @@
 ---
 title: "md_test1"
+data: "2024-10-01"
 editor: visual
 output: github_document
 ---
 
 This is a test of github_document
+
+Today is a first day of Octorber
